# RSS2HTML

./: .gitignore  README.md
ruby/: index.html  main.rb  rss.erb
rust/: Cargo.toml  index.html
rust/files/: index.html  rss.tera
rust/src/: main.rs
rust/templates/: rss.tera
rust2/: Cargo.toml
rust2/files/: index.html  rss.stpl
rust2/src/: main.rs
